--- a/.github/workflows/feature_branch_build.yml
+++ b/.github/workflows/feature_branch_build.yml
@@ -2,8 +2,8 @@ name: Android build
 
 on:
   push:
-    branches: ['features/**']
-    paths: ['mob/**']
+    paths: 
+    - 'mob/**'
 
 jobs:
   build:
