--- a/be/MealForFamily/MealForFamily/Properties/launchSettings.json
+++ b/be/MealForFamily/MealForFamily/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:47299",
-      "sslPort": 44346
+      "applicationUrl": "http://localhost:53233",
+      "sslPort": 44380
     }
   },
   "profiles": {
-    "MealForFamily": {
+    "WebApplication1": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7150;http://localhost:5091",
+      "applicationUrl": "https://localhost:7242;http://localhost:5242",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
