--- a/be/MealForFamily/MealForFamily/docker-compose.yml
+++ b/be/MealForFamily/MealForFamily/docker-compose.yml
@@ -5,24 +5,24 @@ networks:
     driver: bridge 
 
 services:
-  mealforfamily:
-    image: mealforfamily:latest
-    depends_on:
-      - "postgres"
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "8080:80"     
-    environment:
-      DB_CONNECTION_STRING: "host=postgres;port=5432;database=mealforfamilydb;username=test;password=test"
-    networks:
-      - mealforfamily-dev  
+  #mealforfamily:
+  #  image: mealforfamily:latest
+  #  depends_on:
+  #    - "postgres"
+  #  build:
+  #    context: .
+  #    dockerfile: Dockerfile
+  #  ports:
+  #    - "8080:80"     
+  #  environment:
+  #    DB_CONNECTION_STRING: "host=postgres;port=5432;database=mealforfamilydb;username=test;password=test"
+  #  networks:
+  #    - mealforfamily-dev  
   
   postgres:
     image: postgres:latest
     ports:
-      - "5432:5432"
+      - "5434:5432"
     restart: always
     volumes:
       - db_volume:/var/lib/postgresql/data
