--- a/mob/package.json
+++ b/mob/package.json
@@ -23,9 +23,11 @@
     "react-i18next": "^11.18.6",
     "react-native": "0.70.3",
     "react-native-gesture-handler": "^2.7.1",
-    "react-native-reanimated": "^2.10.0",
+    "react-native-reanimated": "^3.0.0-rc.3",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.1",
+    "react-native-svg": "^13.4.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-redux": "^8.0.4",
     "redux-persist": "^6.0.0"
   },
