--- a/mob/ios/ObrokZaPorodicu/Info.plist
+++ b/mob/ios/ObrokZaPorodicu/Info.plist
@@ -57,6 +57,11 @@
 		<string>Dosis-Regular.ttf</string>
 		<string>Montserrat-Regular.ttf</string>
 		<string>Chewy-Regular.ttf</string>
+		<string>Archivo-SemiBold.ttf</string>
+		<string>Dosis-Bold.ttf</string>
+		<string>Dosis-ExtraBold.ttf</string>
+		<string>Dosis-SemiBold.ttf</string>
+		<string>Inter-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
