--- a/mob/package.json
+++ b/mob/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.4.7",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
@@ -24,6 +25,7 @@
     "react-i18next": "^11.18.6",
     "react-native": "0.70.3",
     "react-native-gesture-handler": "^2.7.1",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^3.0.0-rc.3",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.1",
