--- a/mob/package.json
+++ b/mob/package.json
@@ -24,6 +24,7 @@
     "react": "18.1.0",
     "react-i18next": "^11.18.6",
     "react-native": "0.70.3",
+    "react-native-bootsplash": "^4.3.2",
     "react-native-gesture-handler": "^2.7.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^3.0.0-rc.3",
