--- a/fe/package.json
+++ b/fe/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.65",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "axios": "^1.1.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-activity": "^2.1.3",
@@ -19,6 +20,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "redux-saga": "^1.2.1",
     "sass": "^1.55.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
