--- a/mob/package.json
+++ b/mob/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
     "@reduxjs/toolkit": "^1.8.6",
+    "axios": "^0.27.2",
     "formik": "^2.2.9",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^6.1.8",
