--- a/be/Properties/launchSettings.json
+++ b/be/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7157;http://localhost:5081",
+      "applicationUrl": "https://performative.sitesstage.com:5000;http://performative.sitesstage.com:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
