--- a/fe/package.json
+++ b/fe/package.json
@@ -13,9 +13,11 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.2",
+    "bootstrap": "^5.2.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-activity": "^2.1.3",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
