--- a/be/appsettings.Development.json
+++ b/be/appsettings.Development.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "User ID =test;Password=test;Host=127.0.0.1;Port=5434;Database=mealforfamilydb;"
+  },
+  "AppSettings": {
+    "Secret": "VegaS!gm@:SecretKey.m3@l4F@m!lY?.iveSe8retKeyVeg7Meal4S2gm6SigmaV3g@ITK3yS3cr3t-SigmaVega+Family@TIVESIGMAvegAitsecretKeyega#45Key4FamilySecretKey",
   }
 }
