--- a/mob/package.json
+++ b/mob/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^15.7.0",
+    "@react-native-firebase/crashlytics": "^15.7.0",
     "@react-native-picker/picker": "^2.4.7",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
@@ -26,8 +27,8 @@
     "react": "18.1.0",
     "react-i18next": "^11.18.6",
     "react-native": "0.70.3",
-    "react-native-dropdown-picker": "^5.4.2",
     "react-native-bootsplash": "^4.3.2",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-fast-image": "^8.6.1",
     "react-native-gesture-handler": "^2.7.1",
     "react-native-picker-select": "^8.0.4",
