--- a/mob/package.json
+++ b/mob/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/analytics": "^15.7.0",
     "@react-native-firebase/app": "^15.7.0",
     "@react-native-picker/picker": "^2.4.7",
     "@react-navigation/bottom-tabs": "^6.4.0",
