--- a/mob/package.json
+++ b/mob/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^9.3.5",
     "@react-native-firebase/analytics": "^15.7.0",
     "@react-native-firebase/app": "^15.7.0",
+    "@react-native-firebase/crashlytics": "^15.7.0",
     "@react-native-picker/picker": "^2.4.7",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
