[mob-146] dark mode disabled

--- a/mob/ios/ObrokZaPorodicu/Info.plist
+++ b/mob/ios/ObrokZaPorodicu/Info.plist
@@ -78,5 +78,7 @@
 		<string>telprompt</string>
 		<string>mailto</string>
 	</array>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 </dict>
 </plist>
