--- a/fe/package.json
+++ b/fe/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.5.0",
+    "react-simple-wysiwyg": "^2.1.1",
     "redux-saga": "^1.2.1",
     "sass": "^1.55.0",
     "typescript": "^4.8.4",
