--- a/mob/package.json
+++ b/mob/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/analytics": "^15.7.0",
     "@react-native-firebase/app": "^15.7.0",
     "@react-native-firebase/crashlytics": "^15.7.0",
+    "@react-native-firebase/messaging": "^15.7.0",
     "@react-native-picker/picker": "^2.4.7",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
