--- a/mob/android/app/src/main/AndroidManifest.xml
+++ b/mob/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
   package="com.obrokzaporodicu">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
       android:name=".MainApplication"
@@ -21,6 +22,15 @@
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW"/>
+            <category android:name="android.intent.category.DEFAULT"/>
+            <category android:name="android.intent.category.BROWSABLE"/>
+            <data
+                android:host="obrokzaporodicu.page.link"
+                android:scheme="https"/>
+        </intent-filter>
+
       </activity>
     </application>
 </manifest>
