--- a/mob/android/app/src/main/AndroidManifest.xml
+++ b/mob/android/app/src/main/AndroidManifest.xml
@@ -22,13 +22,16 @@
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
-        <intent-filter>
+        <intent-filter android:autoVerify="true">
             <action android:name="android.intent.action.VIEW"/>
             <category android:name="android.intent.category.DEFAULT"/>
             <category android:name="android.intent.category.BROWSABLE"/>
             <data
                 android:host="obrokzaporodicu.page.link"
                 android:scheme="https"/>
+            <data
+                android:host="obrokzaporodicu.page.link"
+                android:scheme="http"/>
         </intent-filter>
 
       </activity>
