--- a/fe/package.json
+++ b/fe/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.10",
     "@reduxjs/toolkit": "^1.8.6",
     "@svgr/webpack": "^6.5.0",
     "@testing-library/jest-dom": "^5.16.5",
