--- a/fe/package.json
+++ b/fe/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-activity": "^2.1.3",
     "react-bootstrap": "^2.5.0",
@@ -26,6 +27,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.5.0",
     "react-simple-wysiwyg": "^2.1.1",
+    "redux-first-history": "^5.1.1",
     "redux-saga": "^1.2.1",
     "sass": "^1.55.0",
     "typescript": "^4.8.4",
