Add email sending service

--- a/be/appsettings.Development.json
+++ b/be/appsettings.Development.json
@@ -5,9 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EmailConfiguration": {
+    "From": "",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "",
+    "Password": ""
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "User ID =test;Password=test;Host=127.0.0.1;Port=5434;Database=mealforfamilydb;"
+    "DefaultConnection": "User ID =test;Password=test;Host=127.0.0.1;Port=5432;Database=mealforfamilydb;"
   },
   "AppSettings": {
     "Secret": "VegaS!gm@:SecretKey.m3@l4F@m!lY?.iveSe8retKeyVeg7Meal4S2gm6SigmaV3g@ITK3yS3cr3t-SigmaVega+Family@TIVESIGMAvegAitsecretKeyega#45Key4FamilySecretKey",
