--- a/fe/.env
+++ b/fe/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL = "http://performative.sitesstage.com:5001/api/"
+# REACT_APP_API_URL = "http://performative.sitesstage.com:5001/api/"
+REACT_APP_API_URL = "http://localhost:5001/api/"
