--- a/mob/android/app/build.gradle
+++ b/mob/android/app/build.gradle
@@ -221,6 +221,7 @@ android {
             keyPassword 'android'
         }
     }
+    namespace 'com.obrokzaporodicu'
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
