--- a/mob/android/app/src/main/AndroidManifest.xml
+++ b/mob/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.obrokzaporodicu">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="3M">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
