--- a/be/appsettings.json
+++ b/be/appsettings.json
@@ -5,6 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EmailConfiguration": {
+    "From": "",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "",
+    "Password": ""
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "User ID =postgres;Password=1234567890;Host=localhost;Port=5432;Database=mealforfamilydb;"
